--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Assignment-1 by erickyan</title>
+    <title>Assignment-1 by group 16</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,17 +15,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Assignment-1</h1>
+        <h1>Group 16 Assignment-1</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/erickyan/assignment-1">View the Project on GitHub <small>erickyan/assignment-1</small></a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/erickyan/assignment-1/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/erickyan/assignment-1/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/erickyan/assignment-1">View On <strong>GitHub</strong></a></li>
-        </ul>
+        Hello World!
       </header>
       <section>
         <h3>
