--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="view"><a href="https://github.com/erickyan/assignment-1">View the Project on GitHub <small>erickyan/assignment-1</small></a></p>
 
         Hello World!
-        <h2></h2></p><a href="https://psleapp.firebaseapp.com/#/">Team 15</a></h2>
+        <h2><a href="https://psleapp.firebaseapp.com/#/">Team 15</a></h2>
         <a href="http://duyloc91.github.io/cloud-assignment-one/">Team 17</a>
 
       </header>
